Minimize memory usage during tests