@@ -95,7 +95,6 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <forkMode>once</forkMode>
-                    <argLine>-Xmx256m -XX:MaxPermSize=256m</argLine>
                 </configuration>
             </plugin>
 
